# trust5

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  correcto.db  pyproject.toml  pyrightconfig.json  tui-notes.md
.moai/: test_persistence.txt
debug_persistence/: test_flush.txt
tests/: test_agent.py  test_agent_task_ownership.py  test_assertion_density.py  test_backoff.py  test_completeness.py  test_compliance.py  test_compliance_llm.py  test_config.py  test_context_builder.py  test_context_propagation.py  test_ensure_ext.py  test_error_summarizer.py  test_event_bus.py  test_integration_fixes.py  test_lang.py  test_lint_exclusion.py  test_llm_auth.py  test_llm_safety.py  test_mutation_task.py  test_ollama_models.py  test_parallel_pipeline.py  test_performance_fixes.py  test_plan_parser.py  test_provider_validation.py  test_quality_gates.py  test_quality_task.py  test_quality_test_exclusion.py  test_repair_task.py  test_review_task.py  test_runner.py  test_setup_task.py  test_tool_safety.py  test_tools.py  test_validate_task.py  test_watchdog.py
trust5/: __init__.py  infrastructure.py  main.py  tui_runner.py
trust5/assets/claude/: settings.json.tmpl
trust5/assets/claude/agents/moai/: builder-agent.md  builder-skill.md  expert-frontend.md  manager-ddd.md  manager-git.md  manager-spec.md  team-researcher.md
trust5/assets/claude/hooks/moai/: handle-agent-hook.sh.tmpl  handle-compact.sh.tmpl  handle-post-tool.sh.tmpl  handle-pre-tool.sh.tmpl  handle-session-end.sh.tmpl  handle-session-start.sh.tmpl  handle-stop.sh.tmpl
trust5/assets/claude/skills/moai/: SKILL.md
trust5/assets/claude/skills/moai-foundation-claude/reference/: claude-code-memory-official.md
trust5/assets/claude/skills/moai-foundation-core/modules/: INDEX.md  agents-reference.md  commands-reference.md
trust5/assets/claude/skills/moai-workflow-templates/: SKILL.md
trust5/assets/claude/skills/moai-workflow-templates/references/: examples.md
trust5/assets/claude/skills/moai/references/: reference.md
trust5/assets/prompts/: builder-plugin.md  expert-backend.md  implementer.md  manager-ddd.md  manager-quality.md  manager-spec.md  repairer.md  reviewer.md  team-designer.md  test-writer.md  trust5-planner.md
trust5/commands/: resume_cmd.py
trust5/core/: agent.py  agent_task.py  compliance.py  config.py  constants.py  context_builder.py  context_keys.py  ears.py  error_summarizer.py  event_bus.py  git.py  implementer_task.py  init.py  lang.py  lang_profiles.py  llm.py  llm_backends.py  llm_constants.py  llm_errors.py  llm_streams.py  loop.py  lsp.py  mcp.py  mcp_manager.py  message.py  ollama_models.py  plan_parser.py  quality.py  quality_gates.py  quality_models.py  quality_validators.py  runner.py  spec_utils.py  tool_definitions.py  tools.py  viewer.py
trust5/core/auth/: __init__.py  callback.py  claude.py  google.py  provider.py  registry.py  token_store.py
trust5/tasks/: mutation_task.py  quality_task.py  repair_task.py  review_task.py  setup_task.py  validate_helpers.py  validate_task.py  watchdog_task.py
trust5/tui/: __init__.py  app.py  events.py  log_widget.py  logo.py  sidebar.py  styles.tcss  theme.py  widgets.py
trust5/workflows/: loop_workflow.py  module_spec.py  parallel_pipeline.py  pipeline.py  plan.py  run.py
