[project]
name = "trust5"
version = "0.1.0"
description = "Trust5 - AI code generation with absolute correctness"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.0,<14",
    "typer>=0.9,<1",
    "requests>=2.28,<3",
    "pyyaml>=6.0,<7",
    "stabilize>=0.17.3",
    "cryptography>=41,<44",
    "pydantic>=2.0,<3",
    "bandit>=1.7,<2",
    "ruff>=0.0.241,<1",
    "mypy>=1.0,<2",
    "basedpyright>=0.1.0,<1",
    "textual>=1.0.0,<2",
    "pytest>=7.0,<8",
    "pytest-xdist>=2.0,<3",
    "pytest-timeout>=2.0,<3",
    "pytest-cov>=3.0,<4",
    "pytest-mock>=3.0,<4",
    "pytest-asyncio>=0.20,<1",
]

[project.optional-dependencies]
dev = [
    "issuedb",
    "scriptplan"
]

[project.scripts]
trust5 = "trust5.main:app"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
mypy_path = "."
explicit_package_bases = true

[tool.setuptools]
packages = ["trust5"]

[tool.setuptools.package-data]
trust5 = ["assets/**/*"]
