[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trust5"
version = "0.6.3"
description = "AI-driven autonomous code generation with correctness guarantees"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    {name = "Farshid Ashouri", email = "farsheed.ashouri@gmail.com"},
]
keywords = ["ai", "code-generation", "llm", "testing", "quality", "autonomous"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    "rich>=13.0,<14",
    "typer>=0.9,<1",
    "requests>=2.28,<3",
    "pyyaml>=6.0,<7",
    "stabilize>=0.17.3",
    "resilient-circuit>=0.4.0",
    "cryptography>=41,<44",
    "pydantic>=2.0,<3",
    "textual>=1.0.0,<2",
]

[project.optional-dependencies]
dev = [
    "bandit>=1.7,<2",
    "basedpyright>=0.1.0,<1",
    "issuedb",
    "mypy>=1.0,<2",
    "pytest>=7.0,<8",
    "pytest-asyncio>=0.20,<1",
    "pytest-cov>=3.0,<4",
    "pytest-mock>=3.0,<4",
    "pytest-timeout>=2.0,<3",
    "pytest-xdist>=2.0,<3",
    "ruff>=0.0.241,<1",
    "scriptplan",
]

[project.urls]
Homepage = "http://trust5.net/"
Repository = "https://github.com/rodmena-limited/trust5"
Issues = "https://github.com/rodmena-limited/trust5/issues"

[project.scripts]
trust5 = "trust5.main:app"

[tool.setuptools.packages.find]
include = ["trust5*"]

[tool.setuptools.package-data]
trust5 = ["assets/**/*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
mypy_path = "."
explicit_package_bases = true
